--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.restaurantsinfo"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -25,10 +25,14 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    api('com.android.support:appcompat-v7:28.0.0') {
+        exclude module: 'support-v4'
+    }
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation('com.android.support.test:runner:1.0.2', {
+        exclude module: 'support-v4'
+    })
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation "android.arch.lifecycle:extensions:$rootProject.archLifecycleVersion"
@@ -38,6 +42,19 @@ dependencies {
     //network
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.android.support:cardview-v7:28.0.0'//converter
+
+    api('com.android.support:recyclerview-v7:28.0.0') {
+        exclude module: 'support-v4'
+    }
+    api('com.android.support:cardview-v7:28.0.0') {
+        exclude module: 'support-v4'
+    }
+
+
+    //ui-test
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+//        exclude group: 'com.android.support', 'module', 'suppoer-annotations'
+
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test:rules:1.1.1'
 }
