--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -25,17 +25,17 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    api('com.android.support:appcompat-v7:28.0.0') {
+    api('androidx.appcompat:appcompat:1.0.0') {
         exclude module: 'support-v4'
     }
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation('com.android.support.test:runner:1.0.2', {
+    androidTestImplementation('androidx.test:runner:1.1.0', {
         exclude module: 'support-v4'
     })
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
-    implementation "android.arch.lifecycle:extensions:$rootProject.archLifecycleVersion"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
 
@@ -43,10 +43,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
-    api('com.android.support:recyclerview-v7:28.0.0') {
+    api('androidx.recyclerview:recyclerview:1.0.0') {
         exclude module: 'support-v4'
     }
-    api('com.android.support:cardview-v7:28.0.0') {
+    api('androidx.cardview:cardview:1.0.0') {
         exclude module: 'support-v4'
     }
 
